--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                         <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
                         <div class="customer_box">
                            <i><img src="images/customer.png" alt="#"/></i>
-                           <h4>Mark jo</h4>
+                           <h4>Jaimin</h4>
                            <span>jected humour</span>
                         </div>
                      </div>
@@ -414,7 +414,7 @@
                </div>
                <div class="copyright">
                   <div class="container">
-                     <p>Copyright 2019 All Right Reserved By <a href="https://html.design/">Free html Templates</a></p>
+                     <p>Copyright 2019 All Right Reserved By <a href="http://dobs.ml/">Dobs Infotech</a></p>
                   </div>
                </div>
             </div>
